<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/basics" app:iconSpaceReserved="false">
        <Preference
            app:key="@string/boot_setting_key"
            app:title="@string/boot_setting_title"
            app:icon="@drawable/boot_icon"
            app:fragment="com.taffo.lockscreenear.activities.SettingsActivity$BootSettingFragment" />

        <Preference
            app:key="@string/volume_adapter_setting_key"
            app:title="@string/volume_adapter_setting_title"
            app:icon="@drawable/volume_icon"
            app:fragment="com.taffo.lockscreenear.activities.SettingsActivity$VolumeAdapterSettingFragment" />

        <Preference
            app:key="@string/quick_setting_key"
            app:title="@string/quick_setting_title"
            app:icon="@drawable/locked_icon"
            app:fragment="com.taffo.lockscreenear.activities.SettingsActivity$QuickSettingFragment" />

        <Preference
            app:key="@string/call_setting_key"
            app:title="@string/call_setting_title"
            app:icon="@drawable/call_icon"
            app:fragment="com.taffo.lockscreenear.activities.SettingsActivity$CallSettingFragment" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about_title" app:iconSpaceReserved="false">
        <Preference
            app:title="@string/warnings_title"
            app:iconSpaceReserved="false"
            app:fragment="com.taffo.lockscreenear.activities.SettingsActivity$WarningsFragment" />

        <Preference
            app:key="@string/source_code_key"
            app:title="@string/source_code_title"
            app:iconSpaceReserved="false">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://www.github.com/EmanueleDeSantis/lockscreenearEar" />
        </Preference>

        <Preference
            app:key="@string/about_key"
            app:title="@string/build_version"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory app:key="@string/uninstall_category_setting_key" app:title="@string/uninstall" app:iconSpaceReserved="false">
        <Preference
            app:key="@string/uninstall_setting_key"
            app:title="@string/uninstall_setting_title"
            app:icon="@drawable/uninstall_icon"
            app:fragment="com.taffo.lockscreenear.activities.SettingsActivity$UninstallSettingFragment" />
    </PreferenceCategory>

</PreferenceScreen>