<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/warnings_title" app:iconSpaceReserved="false">
        <Preference
            app:selectable="false"
            app:layout="@layout/volume_adjuster_setting" />
    </PreferenceCategory>

    <PreferenceCategory>
        <SwitchPreference
            app:key="@string/volume_adjuster_setting_shared_pref"
            app:title="@string/automatic_volume_level"
            app:summaryOn="@string/enabled"
            app:summaryOff="@string/disabled"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />

        <ListPreference
            app:key="@string/volume_adjuster_mode_list_setting_shared_pref"
            app:title="@string/volume_adjustment_mode"
            app:entries="@array/array_volume_adjuster_mode"
            app:entryValues="@array/array_volume_adjuster_mode_values"
            app:defaultValue="@string/array_item_volume_adjuster_mode_normal_string_value"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true"
            app:dependency="@string/volume_adjuster_setting_shared_pref" />

        <SwitchPreference
        app:key="@string/restore_previous_volume_level_setting_shared_pref"
        app:title="@string/restore_previous_volume_level"
        app:summaryOn="@string/enabled"
        app:summaryOff="@string/disabled"
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:dependency="@string/volume_adjuster_setting_shared_pref" />
    </PreferenceCategory>

</PreferenceScreen>