<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/warnings_title" app:iconSpaceReserved="false">
        <Preference
            app:selectable="false"
            app:layout="@layout/boot_setting" />
    </PreferenceCategory>

    <PreferenceCategory app:iconSpaceReserved="false">
        <SwitchPreference
            app:key="@string/boot_setting_number_of_notes_to_play_shared_pref"
            app:title="@string/lock_screen_on_boot"
            app:summaryOn="@string/enabled"
            app:summaryOff="@string/disabled"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />

        <ListPreference
            app:key="@string/boot_list_setting_number_of_notes_to_play_shared_pref"
            app:title="@string/number_of_notes_to_play"
            app:entries="@array/array_lock_screen_on_boot_array_number_of_notes"
            app:entryValues="@array/array_lock_screen_on_boot_array_number_of_notes"
            app:defaultValue="@string/_3"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true"
            app:dependency="@string/boot_setting_number_of_notes_to_play_shared_pref" />

        <SwitchPreference
            app:key="@string/boot_setting_volume_shared_pref"
            app:title="@string/volume_level_on_boot"
            app:summaryOn="@string/enabled"
            app:summaryOff="@string/disabled"
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:dependency="@string/boot_setting_number_of_notes_to_play_shared_pref" />

        <SeekBarPreference
            app:key="@string/boot_setting_volume_level_shared_pref"
            app:title="@string/volume_level"
            app:min="0"
            app:defaultValue="@string/_3"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true"
            app:showSeekBarValue="true"
            app:dependency="@string/boot_setting_volume_shared_pref" />
    </PreferenceCategory>

</PreferenceScreen>