<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/warnings_title" app:iconSpaceReserved="false">
        <Preference
            app:selectable="false"
            app:layout="@layout/volume_adapter_setting" />
    </PreferenceCategory>

    <PreferenceCategory>
    <SwitchPreference
        app:key="@string/volume_adapter_switch_setting_shared_pref"
        app:title="@string/automatic_volume_level"
        app:summaryOn="@string/enabled"
        app:summaryOff="@string/disabled"
        app:defaultValue="false"
        app:iconSpaceReserved="false" />

        <SwitchPreference
        app:key="@string/restore_previous_volume_level_switch_setting_shared_pref"
        app:title="@string/restore_previous_volume_level"
        app:summaryOn="@string/enabled"
        app:summaryOff="@string/disabled"
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:dependency="@string/volume_adapter_switch_setting_shared_pref" />
    </PreferenceCategory>

</PreferenceScreen>