<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF323232"
    tools:context=".LockScreenActivity"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/insert_notes"
            android:textColor="#FF91EA2A"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="75dp"
            android:layout_marginRight="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/buttonDo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="10sp"
                android:background="@drawable/round"
                android:text="@string/Do"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonDodie"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="10sp"
                android:background="@drawable/round"
                android:text="@string/Dodie"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonRe"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="10sp"
                android:background="@drawable/round"
                android:text="@string/Re"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/buttonRedie"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="10sp"
                android:background="@drawable/round"
                android:text="@string/Redie"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonMi"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="10sp"
                android:background="@drawable/round"
                android:text="@string/Mi"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonFa"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="10sp"
                android:background="@drawable/round"
                android:text="@string/Fa"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/buttonFadie"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="10sp"
                android:background="@drawable/round"
                android:text="@string/Fadie"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonSol"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="10sp"
                android:background="@drawable/round"
                android:text="@string/Sol"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonSoldie"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="10sp"
                android:background="@drawable/round"
                android:text="@string/Soldie"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/buttonLa"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="10sp"
                android:background="@drawable/round"
                android:text="@string/La"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonLadie"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="10sp"
                android:background="@drawable/round"
                android:text="@string/Ladie"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonSi"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="10sp"
                android:background="@drawable/round"
                android:text="@string/Si"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>