<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_launcher_main_background"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/click_to_grant_permissions_and_start_the_service"
        android:textColor="@color/custom_text_view_main_activity"
        android:textSize="25sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/switchLayout" />

    <LinearLayout
        android:id="@+id/switchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/notesLayout">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/startSwitch"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/grant_and_start"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/notesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/switchLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/earTrainingContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/number_of_notes_to_play"
            android:textSize="20sp"
            style="@style/MainActivityDayNight" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextInputLayoutStyle"
            android:theme="@style/TextInputLayoutTheme">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/numberInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/_3"
                android:textColor="@color/custom_auto_complete_text_view_text_highlighted"
                android:textSize="18sp"
                android:gravity="end"
                android:inputType="none"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/earTrainingContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/notesLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/trainingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/diapasonLayout">

            <Button
                android:id="@+id/trainingButton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/training"
                android:fontFamily="sans-serif-medium"
                android:background="@drawable/main_activity_button"
                style="@style/ButtonNoTint" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/diapasonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/trainingLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/diapasonButton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/diapason"
                android:fontFamily="sans-serif-medium"
                android:background="@drawable/main_activity_button"
                style="@style/ButtonNoTint" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>